--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,13 +83,23 @@
         android:visibility="visible"
         android:id = "@+id/insertName"
         android:clickable="true"
-        android:layout_marginBottom="100dp"
         app:layout_constraintTop_toBottomOf="@id/start"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/reset"
         />
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/reset"
+        android:visibility="invisible"
+        android:layout_marginBottom="130dp"
+        android:clickable="false"
+        android:text = "@string/reset"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/insertName"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
