--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,10 @@
         android:text="@string/instructions"
         android:id="@+id/instructions"
         android:textAlignment="center"
+        android:shadowColor="#87CEFA"
+        android:shadowDx="1.5"
+        android:shadowDy="1.3"
+        android:shadowRadius="1.6"
         android:textColor="@color/green"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,9 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/score"
+        android:textSize="24dp"
         android:text = "@string/score"
         android:textAlignment="center"
         android:textColor="@color/blue"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/back"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/instructions"/>
