--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="green">#008000</color>
     <color name="blue">#00BFFF</color>
+    <color name="yellow">#FFFF00</color>
 </resources>
