--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,11 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:textColor="@color/green"
+        android:layout_marginTop="17.5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/score"/>
 <!--scoreview-->
     <TextView
         android:layout_width="wrap_content"
@@ -33,16 +35,33 @@
         android:background="@drawable/back"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructions"/>
+        app:layout_constraintTop_toBottomOf="@id/instructions"
+        app:layout_constraintBottom_toTopOf="@id/timer"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timer"
+        android:text="Time Remaining: 30 seconds"
+        android:textColor = "@color/red"
+        android:visibility="invisible"
+        android:textAlignment="center"
+        android:background="@drawable/timer"
+        app:layout_constraintTop_toBottomOf="@id/score"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/graphic"/>
+
 <!--    center image-->
     <ImageView
         android:layout_width="300dp"
-        android:layout_height="500dp"
+        android:layout_height="200dp"
         android:id = "@+id/graphic"
         android:src ="@drawable/numbers"
-        app:layout_constraintTop_toBottomOf="@id/score"
+        app:layout_constraintTop_toBottomOf="@id/timer"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/start"/>
+
 <!--start Button-->
     <Button
         android:layout_width="wrap_content"
@@ -106,7 +125,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/insertName"/>
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
