--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="green">#008000</color>
     <color name="blue">#00BFFF</color>
     <color name="yellow">#FFFF00</color>
+    <color name="red">#FF0000</color>
+    <color name = "white">#FFFFFF</color>
 </resources>
