--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:shadowDy="1.3"
         android:shadowRadius="1.6"
         android:textColor="@color/green"
-        android:layout_marginTop="17.5dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timebar"
@@ -29,6 +29,7 @@
         android:color = "@color/blue"
         android:progress = "100"
         android:visibility="invisible"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/instructions"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -118,6 +119,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:hint="@string/name"
         android:visibility="visible"
         android:id = "@+id/insertName"
